Fixed various spelling mistakes.

--- a/readme.html
+++ b/readme.html
@@ -186,7 +186,7 @@ implementation of GLXFBConfigs.</p>
   <tr>
     <td>_GLFW_HAS_XF86VIDMODE</td>
     <td>Use the Xf86VidMode extension for display mode changes. This is a
-        fallback method.</td>
+        fall-back method.</td>
   </tr>
   <tr>
     <td>_GLFW_HAS_PTHREAD</td>
@@ -328,7 +328,7 @@ to install to a different location, set the environment variable
 <code>PREFIX</code> appropriately when running make.</p>
 
 <p>Note that the shared library is not installed by default, as you really
-should think twice before using it. GLFW is very small and very sutable for
+should think twice before using it. GLFW is very small and very suitable for
 static linking. The GLFW license also allows static linking without requiring
 your to share your code.</p>
 
@@ -726,7 +726,7 @@ version of GLFW.</p>
  <li>[X11] Bugfix: Iconification of fullscreen windows should now work
      properly</li>
  <li>[x86 CPUs] Improved RDTSC timing (e.g. RDTSC support on single-CPU
-     Intel Hyper-Threading enabled systmes)</li>
+     Intel Hyper-Threading enabled systems)</li>
  <li>[AmigaOS] Added joystick support</li>
  <li>[AmigaOS] Mouse cursor positioning is now implemented</li>
  <li>[AmigaOS] Added support for Geek Gadgets GCC</li>
@@ -815,7 +815,7 @@ version of GLFW.</p>
      shifts)</li>
  <li>[X11] Bugfix: Visuals are now selected more accurately. For instance,
      glfwOpenWindow will no longer fail if you request a 24-bit color
-     buffer if only 16-bit color visuals are avilable (which means that
+     buffer if only 16-bit color visuals are available (which means that
      pong3d should work on 16-bit displays).</li>
 </ul>
 
