--- a/readme.html
+++ b/readme.html
@@ -284,8 +284,8 @@ opengl32.dll is located), or to the project directory of your GLFW-based
 projects (where you place your executable files).</p>
 
 <p>You should also copy the GLFW include file, <code>include\GL\glfw.h</code>,
-to the <code>GL</code> directory of your compiler's include directory (where
-<code>gl.h</code>, <code>glu.h</code> etc. are located).</p>
+to the <code>GL</code> directory of your compiler's include directory (i.e.
+where <code>gl.h</code>, <code>glu.h</code> etc. are located).</p>
 
 
 <h3>3.2 Unix</h3>
