--- a/readme.html
+++ b/readme.html
@@ -996,21 +996,20 @@ version of GLFW.</p>
 <a name="contact">
 <h2>7. Contacting the project</h2>
 
-<p>The official GLFW web site can be found here:
-<a href="http://www.glfw.org/">http://www.glfw.org/</a>. It contains the latest
-version of GLFW, news and other information that is useful for OpenGL
-development.</p>
+<p>The official website for GLFW is <a href="http://www.glfw.org/">glfw.org</a>.
+It contains the latest version of GLFW, news and other information that is
+useful for OpenGL development.</p>
 
 <p>If you have questions related to the use of GLFW, we have a
 <a href="https://sourceforge.net/forum/forum.php?forum_id=247562">user's web forum</a>,
 and a
 <a href="https://lists.sourceforge.net/lists/listinfo/glfw-user">user's mailing list</a>
-on SF.net, and the IRC channel <code>#glfw</code> on
+on SF.net, and the registered IRC channel <code>#glfw</code> on
 <a href="http://freenode.net/">Freenode</a>.</p>
 
-<p>If you have a bug to report or a feature you'd like to request, please file
-it in the
-<a href="http://sourceforge.net/tracker/?group_id=72569">SF.net trackers</a>.</p>
+<p>If you have a bug to report, a patch to submit or a feature you'd like to
+request, please file it in one of the
+<a href="http://sourceforge.net/tracker/?group_id=72569">GLFW trackers</a> on SF.net.</p>
 
 Finally, if you're interested in helping out with the development of
 GLFW or porting it to your favorite platform, we have a
