--- a/readme.html
+++ b/readme.html
@@ -492,7 +492,7 @@ such as <code>opengl32</code> and <code>glu32</code>):</p>
 
 <h4>4.2.3 Unix static library</h4>
 
-<p>GLFW now supports
+<p>GLFW supports
 <a href="http://pkgconfig.freedesktop.org/wiki/">pkg-config</a>,
 and a <code>libglfw.pc</code> file is generated and installed when you install
 the library.  For systems that do not provide pkg-config, you should look in
@@ -518,7 +518,7 @@ these frameworks to your project. If, however, you are building your program
 from the command-line, there are two methods for correctly linking your GLFW
 program.</p>
 
-<p>GLFW now supports
+<p>GLFW supports
 <a href="http://pkgconfig.freedesktop.org/wiki/">pkg-config</a>, and a
 libglfw.pc file is generated and installed when you install the library. You
 can find pkg-config in most packaging systems, such as
