--- a/readme.html
+++ b/readme.html
@@ -170,8 +170,8 @@ features and code paths.  They need to be defined either on the command-line or
 at the very beginning for each GLFW source file with an <code>x11_</code>
 prefix.</p>
 
-<p>Note that the X11 port of GLFW compiles but is currently unable to open a
-window when running with X11.app on Mac OS X, due to Apple's incomplete
+<p>Note that the X11 port of GLFW compiles on Mac OS X, but is currently unable
+to open a window when running against X11.app, due to Apple's incomplete
 implementation of GLXFBConfigs.</p>
 
 <table border=1>
