--- a/readme.html
+++ b/readme.html
@@ -217,7 +217,7 @@ implementation of GLXFBConfigs.</p>
   <tr>
     <td>_GLFW_HAS_DLOPEN</td>
     <td>Use <code>dlopen</code> on the OpenGL shared library to retrieve OpenGL
-        entry point addresses.  This is a fallback method.</td>
+        entry point addresses.  This is a fall-back method.</td>
   </tr>
   <tr>
     <td>_GLFW_HAS_SYSCONF</td>
