Added iconify fix to changelog.

--- a/readme.html
+++ b/readme.html
@@ -592,6 +592,7 @@ version of GLFW.</p>
   <li>[X11] Bugfix: Numeric keypad key symbols would change depending on Num Lock state</li>
   <li>[X11] Bugfix: Hidden cursor position snapped back when halfway from window center to edge</li>
   <li>[X11] Bugfix: The response to <code>_NET_WM_PING</code> events was malformed</li>
+  <li>[X11] Bugfix: Restoring an iconified fullscreen window caused the application to abort with a <code>BadMatch</code> Xlib error</li>
   <li>[Carbon] Added Universal Binary build targets for all examples</li>
   <li>[Carbon] Renamed MacOSX port to Carbon</li>
   <li>[Carbon] Removed support for 10.2 Jaguar</li>
