Added note on legacy atoms to changelog.

--- a/readme.html
+++ b/readme.html
@@ -582,6 +582,7 @@ version of GLFW.</p>
   <li>[X11] Improved configuration and makefile creation logic</li>
   <li>[X11] Removed support for GLX version 1.2 and below</li>
   <li>[X11] Removed unnecessary calls to XSync</li>
+  <li>[X11] Removed use of legacy window style atoms</li>
   <li>[X11] Bugfix: Repeated keys would sometimes leak through despite key repeat being disabled</li>
   <li>[X11] Bugfix: Fullscreen window resizing would cause color buffer clearing without taking framebuffer objects into account</li>
   <li>[X11] Bugfix: AltGr was not reported as right Alt</li>
