--- a/readme.html
+++ b/readme.html
@@ -1115,6 +1115,8 @@ their skills.  Special thanks go out to:</p>
 
   <li>Santi Zupancic, for support, bug reports and testing</li>
 
+  <li>Lasse Öörni, for submitting patches for the input code of the Win32 and X11 ports</li>
+
   <li>Дмитри Малышев, for the idea of a GLFW_NO_GLU macro</li>
 
   <li>blanco, for submitting a patch for a deprecation bug in the Cocoa port</li>
