Added heightmap example to changelog.

--- a/readme.html
+++ b/readme.html
@@ -562,6 +562,7 @@ version of GLFW.</p>
   <li>Added error messages and graceful failure to example programs</li>
   <li>Added Cocoa port for Mac OS X 10.5 Leopard and later</li>
   <li>Added vsync to all relevant example programs</li>
+  <li>Added a rudimentary OpenGL 3.2+ core profile example program</li>
   <li>Updated Pascal (formerly Delphi) bindings to support more compilers</li>
   <li>Clarified and expanded the User's Guide and Reference Manual</li>
   <li>Fixed a number of compiler warnings in the example programs</li>
