Added credits entry.

--- a/readme.html
+++ b/readme.html
@@ -1058,6 +1058,9 @@ their skills.  Special thanks go out to:</p>
   <li>Marcus Geelnard, the original author and long-time maintainer of GLFW,
   without whose brilliant work none of this would have happened</li>
 
+  <li>Stefan Gustavson, for quick and thorough testing of GLFW on many and
+  varied operating systems and hardware configurations</li>
+
   <li>Sylvain Hellegouarch, for support, bug reports and testing</li>
 
   <li>Alex Holkner, for writing the code from which the Compiz/Intel fix was
