Clarified language concerning window hint resetting.

--- a/readme.html
+++ b/readme.html
@@ -549,6 +549,7 @@ version of GLFW.</p>
 
 <h3>v2.7.1</h3>
 <ul>
+  <li>Clarified language in the Reference Manual concerning window hint resetting</li>
   <li>Bugfix: The default OpenGL version in the <code>version</code> test was set to 1.1</li>
   <li>[X11] Bugfix: Calling <code>glXCreateContextAttribsARB</code> with an unavailable OpenGL version caused the application to terminate with a <code>BadMatch</code> Xlib error</li>
   <li>[Win32] Bugfix: The <code>WGLSWAPINTERVALEXT_T</code> typedef was declared under <code>WGL_ARB_pixel_format</code></li>
