--- a/readme.html
+++ b/readme.html
@@ -554,6 +554,7 @@ version of GLFW.</p>
   <li>Bugfix: The default OpenGL version in the <code>version</code> test was set to 1.1</li>
   <li>[X11] Bugfix: Calling <code>glXCreateContextAttribsARB</code> with an unavailable OpenGL version caused the application to terminate with a <code>BadMatch</code> Xlib error</li>
   <li>[Win32] Bugfix: The <code>WGLSWAPINTERVALEXT_T</code> typedef was declared under <code>WGL_ARB_pixel_format</code></li>
+  <li>[Win32] Bugfix: The array for WGL context attributes was too small and could overflow</li>
 </ul>
 
 <h3>v2.7</h3>
@@ -1144,6 +1145,8 @@ their skills.  Special thanks go out to:</p>
 
   <li>TTK-Bandit, for submitting a number of input patches adding many missing
   keys to the Win32 and X11 ports</li>
+
+  <li>yuriks, for reporting a bug in Win32 context creation</li>
 
   <li>All the unmentioned and anonymous contributors in the GLFW community, for
   bug reports, patches, feedback and encouragement</li>
