Fixed loop condition bug.

--- a/readme.html
+++ b/readme.html
@@ -552,6 +552,7 @@ version of GLFW.</p>
   <li>Clarified language in the Reference Manual concerning window hint resetting</li>
   <li>Bugfix: The OpenGL profile and forward-compatibility window parameters were not loaded after context creation</li>
   <li>Bugfix: The default OpenGL version in the <code>version</code> test was set to 1.1</li>
+  <li>[Cocoa] Bugfix: The loop condition for saving video modes used the wrong index variable</li>
   <li>[X11] Bugfix: Calling <code>glXCreateContextAttribsARB</code> with an unavailable OpenGL version caused the application to terminate with a <code>BadMatch</code> Xlib error</li>
   <li>[Win32] Bugfix: The <code>WGLSWAPINTERVALEXT_T</code> typedef was declared under <code>WGL_ARB_pixel_format</code></li>
   <li>[Win32] Bugfix: The array for WGL context attributes was too small and could overflow</li>
