--- a/readme.html
+++ b/readme.html
@@ -552,6 +552,7 @@ version of GLFW.</p>
   <li>Clarified language in the Reference Manual concerning window hint resetting</li>
   <li>Bugfix: The OpenGL profile and forward-compatibility window parameters were not loaded after context creation</li>
   <li>Bugfix: The default OpenGL version in the <code>version</code> test was set to 1.1</li>
+  <li>Bugfix: The FSAA test did not check for the availability of <code>GL_ARB_multisample</code></li>
   <li>[Cocoa] Bugfix: The loop condition for saving video modes used the wrong index variable</li>
   <li>[X11] Bugfix: Calling <code>glXCreateContextAttribsARB</code> with an unavailable OpenGL version caused the application to terminate with a <code>BadMatch</code> Xlib error</li>
   <li>[Win32] Bugfix: The <code>WGLSWAPINTERVALEXT_T</code>, <code>WGLGETEXTENSIONSSTRINGARB_T</code> and <code>WGLGETEXTENSIONSSTRINGEXT_T</code> typedefs were declared under <code>WGL_ARB_pixel_format</code></li>
